objects/Rate_Template__c.object
<CustomObject>
    <description>This object holds the descriptors of the rate table templates applied during plan administration. The detailed definition of each template is declared only in ICM.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Id__c</fullName>
        <displayFormat>RT-{0}</displayFormat>
        <label>Counter Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Rule__c</fullName>
        <label>Payment Rule</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitivity_LHS__c</fullName>
        <label>Sensitivity LHS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitivity_RHS__c</fullName>
        <label>Sensitivity RHS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Rate Template</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Notes__c</columns>
        <columns>Payment_Rule__c</columns>
        <columns>Sensitivity_LHS__c</columns>
        <columns>Sensitivity_RHS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Templates</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>